fix(current-track): Fix cover-size on small displays.

--- a/src/app/components/current-track/current-track.component.scss
+++ b/src/app/components/current-track/current-track.component.scss
@@ -95,9 +95,9 @@ h2 {
 #container {
   display: inline-block;
   position: relative;
-  width: 15%;
-  max-width: 400px;
-  max-height: 400px;
+  width: 20%;
+  max-width: 300px;
+  max-height: 300px;
   min-height: 180px;
   min-width: 180px;
 }
